force-app/main/default/objects/Consideration__c/Consideration__c.object-meta.xml
<CustomObject>
    <description>An option the agent weighed, taken or not, with its confidence. Master-detail child of Decision_Record__c. Source for the What it considered panel.</description>
    <label>Consideration</label>
    <nameField>
        <displayFormat>CN-{000000}</displayFormat>
        <label>Consideration Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Considerations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>