force-app/main/default/objects/Consideration__c/fields/Confidence__c.field-meta.xml
<CustomField>
    <fullName>Confidence__c</fullName>
    <label>Confidence</label>
    <description>The confidence score the agent assigned to this option, 0 to 1.</description>
    <inlineHelpText>Confidence score for this option, from 0.00 to 1.00.</inlineHelpText>
    <type>Number</type>
    <precision>3</precision>
    <scale>2</scale>
</CustomField>