force-app/main/default/objects/Consideration__c/fields/Decision_Record__c.field-meta.xml
<CustomField>
    <fullName>Decision_Record__c</fullName>
    <label>Decision Record</label>
    <description>The decision this option was weighed within.</description>
    <type>MasterDetail</type>
    <referenceTo>Decision_Record__c</referenceTo>
    <relationshipLabel>Considerations</relationshipLabel>
    <relationshipName>Considerations</relationshipName>
</CustomField>