force-app/main/default/objects/Consideration__c/fields/Option_Label__c.field-meta.xml
<CustomField>
    <fullName>Option_Label__c</fullName>
    <label>Option Label</label>
    <description>Human-readable label of the option the agent considered.</description>
    <inlineHelpText>The option that was weighed, e.g. a topic or action name.</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>