force-app/main/default/objects/Consideration__c/fields/Option_Type__c.field-meta.xml
<CustomField>
    <fullName>Option_Type__c</fullName>
    <label>Option Type</label>
    <description>The kind of option considered.</description>
    <inlineHelpText>Whether the option was a Topic, an Action, or a Route.</inlineHelpText>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Topic</fullName>
            </value>
            <value>
                <fullName>Action</fullName>
            </value>
            <value>
                <fullName>Route</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>