force-app/main/default/objects/Consideration__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <label>Rejection Reason</label>
    <description>Why a non-taken option was rejected. Blank for the taken option.</description>
    <inlineHelpText>The reason this option was not chosen.</inlineHelpText>
    <type>Text</type>
    <length>255</length>
</CustomField>