force-app/main/default/objects/Consideration__c/fields/Taken__c.field-meta.xml
<CustomField>
    <fullName>Taken__c</fullName>
    <label>Taken</label>
    <description>True for the option the agent actually chose.</description>
    <inlineHelpText>Whether this is the option the agent took.</inlineHelpText>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>